--- a/src/app/client/programa/programa.component.html
+++ b/src/app/client/programa/programa.component.html
@@ -1,12 +1,7 @@
 <app-navbar-client></app-navbar-client>
-<style>
-    table {
-        border: 1px solid black;
-        align-items: center;
-    }
-</style>
-<div class="container py-3">
-    <h1>Mi programa BIT</h1>
+
+<div class="container py-3" >
+    <h1 class="titulo" >Mi programa BIT</h1>
     <div class="row py-3">
         <div class="col-12">
             <div *ngFor="let item of talleres">
