--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -85,7 +85,7 @@
                                     <strong>¿QUIÉNES ASISTIRÁN AL BIT MX?</strong>
                                 </h1>
                                 <p class="card-text-list">
-                                    <i class="fa-regular fa-star"></i>Estudiantes universitarios.
+                                    <i class="fa-regular fa-star">Estudiantes universitarios.</i>
                                 </p>
                                 <p class="card-text-list">
                                     <i class="fa-regular fa-star"></i> Emprendedores en potencia.
