--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -133,14 +133,14 @@ header{
     text-align: center;
     color: #171616;
 } 
-.card-text-list{
+/* .card-text-list{
     font-weight: 400;
     font-size: 18px;
     line-height: 20px;
     text-align: center;
     color: #171616;
     margin: 25px;
-}
+} */
 .img-conten{
     width: 100%;
     height: 100%;  
