--- a/src/app/client/completar/completar.component.html
+++ b/src/app/client/completar/completar.component.html
@@ -1,20 +1,4 @@
-<nav class="navbar color-bit">
-    <div class="container-fluid">
-      <img src="./assets/img/logo.png" alt="bitmx" class="bitmx" />
-      <ul class="nav justify-content-end">
-        <li class="nav-item my-2 px-4 px-xxl-4">
-          <a class="nav-link" [routerLink]="['/planes']">Planes</a>
-        </li>
-        <li class="nav-item my-2 px-4 px-xxl-4">
-          <a class="nav-link" [routerLink]="['/qr']">Boleto</a>
-        </li>
-        <li class="nav-item my-2 px-4 px-xxl-4">
-          <a class="nav-link" [routerLink]="['/talleres']">Talleres</a>
-        </li>
-        <li class="nav-item my-2 px-4 px-xxl-4">
-          <a class="nav-link" [routerLink]="['/perfil']">Perfil</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+<app-navbar-client></app-navbar-client>
+
+<h1>Acompletar</h1>
   
