--- a/src/app/pages/registro/registro.component.scss
+++ b/src/app/pages/registro/registro.component.scss
@@ -52,3 +52,35 @@
     height: 141px;
     left: 54px;
 }
+
+
+
+.color-bit {
+    background-color:#F8F8F8;
+  }
+  
+  
+  .nav-link{
+    position: relative;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    color: black;
+    font-weight: 700;
+    letter-spacing: 4px;
+    font-size: 1.075rem;
+    line-height: 1;
+    text-underline-offset: 10px;
+    margin: .1rem 2rem;
+    padding: .5rem .8rem;
+  }
+  .nav-link:hover, .nav-link:focus{
+    color: black;
+    text-decoration: underline  3px royalblue;
+  }
+  .nav-link:focus + .nav-link, .nav-link:focus{
+    color: royalblue;
+  }
+  .nav-link:active{
+    color: royalblue;
+  }
