--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -4,7 +4,7 @@
         <div class="p-5 col-12" align="center">
             <div class="card mb-3" style="max-width: 720px">
                 <div class="row g-0">
-                    <div class="col-md-4 primer_cuadro_login">
+                    <div class="col-md-3 primer_cuadro_login">
                         <hr />
                         <hr />
                         <hr />
@@ -13,15 +13,14 @@
                         </p>
                         <img src="./assets/img/login_mano.png" alt="" />
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-9">
                         <div class="card-body cuadro_card">
                             <div class="row">
-                                
                                 <nav class="navbar color-bit">
                                     <div class="container-fluid">
                                       <ul class="nav justify-content-end">
                                         <li class="nav-item my-2 px-4 px-xxl-4">
-                                          <a class="nav-link active" [routerLink]="['/registro']">Registro</a>
+                                          <a class="nav-link" [routerLink]="['/registro']">Registro</a>
                                         </li>
                                         <li class="nav-item my-2 px-4 px-xxl-4">
                                           <a class="nav-link" [routerLink]="['/login']">Login</a>
@@ -30,7 +29,6 @@
                                       </ul>
                                     </div>
                                   </nav>
-                                
                             </div>
                             <hr />
                             <h5 class="card-title">Bienvenido de nuevo</h5>
