--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -85,13 +85,13 @@
                                     <strong>¿QUIÉNES ASISTIRÁN AL BIT MX?</strong>
                                 </h1>
                                 <p class="card-text-list">
-                                    <i class="fa-regular fa-star">Estudiantes universitarios.</i>
+                                    <i class="fa fa-star-o" aria-hidden="true"></i>Estudiantes universitarios.
                                 </p>
                                 <p class="card-text-list">
-                                    <i class="fa-regular fa-star"></i> Emprendedores en potencia.
+                                    <i class="fa fa-star-o" aria-hidden="true"></i>Emprendedores en potencia.
                                 </p>
                                 <p class="card-text-list">
-                                    <i class="fa-regular fa-star"></i> Aliados estratégicos.
+                                    <i class="fa fa-star-o" aria-hidden="true"></i>Aliados estratégicos.
                                 </p>
                             </div>
                         </div>
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div class="col-12 p-5 text-planes">
-            <h1 >NUESTROS PLANES</h1>
+            <h1 id="Planes" >NUESTROS PLANES</h1>
             <h2 >Obtén tus entradas</h2>
             <div class="row">
                 <div class="p-5 col-6">
@@ -159,7 +159,7 @@
             </div>
         </div>
         <div class=" col-12">
-            <h2 class="text-patrocinador" >Patrocinadores</h2>
+            <h2 id="Patrocinador" class="text-patrocinador" >Patrocinadores</h2>
             <div class="row" align="center">
                 <div class="col-3"><img src="./assets/img/halcones.png" style="height: 8rem" /></div>
                 <div class="col-3"><img src="./assets/img/halcones.png" style="height: 8rem" /></div>
