--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -28,9 +28,9 @@
                     <ul class="columna2">
                         <li><a href="#">POLÍTICA DE PRIVACIDAD</a></li>
                         <li><a href="#">TALLERES</a></li>
-                        <li><a href="#">PLANES</a></li>
+                        <li><a href="#Planes">PLANES</a></li>
                         <li><a href="#">PRENSA</a></li>
-                        <li><a href="#">PATROCINADORES</a></li>
+                        <li><a href="#Patrocinador">PATROCINADORES</a></li>
                     </ul>
                 </div>
             </div>
