--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar color-bit">
   <div class="container-fluid">
-    <img src="./assets/img/logo.png" alt="bitmx" class="bitmx" />
+    <img src="./assets/img/logo.png" [routerLink]="['/welcome']" alt="bitmx" class="bitmx" />
     <ul class="nav justify-content-end">
       <li class="nav-item my-2 px-4 px-xxl-4">
-        <a class="nav-link" [routerLink]="['/planes']">Planes</a>
+        <a class="nav-link" href="#Planes">Planes</a>
       </li>
       <li class="nav-item my-2 px-4 px-xxl-4">
         <a class="nav-link" [routerLink]="['/talleres']">Talleres</a>
