--- a/src/app/client/talleres/talleres.component.html
+++ b/src/app/client/talleres/talleres.component.html
@@ -1,22 +1,24 @@
 <app-navbar-client></app-navbar-client>
-<div class="col-12 p-5 text-talleres">
-    <h2 align="center">NUESTROS TALLERES</h2>
-</div>
-<div class="col-12 py-5">
-    <div class="row" align="center">
-        <div class="col-4" *ngFor="let item of talleres">
-            <div class="card" style="width:25rem">
-                <img src="./assets/img/{{item.imagen}}" style="width: auto;" class="card-img-top"/>
-                <div class="card-body">
-                    <h1>{{item.taller}}</h1>
-                    <h1>{{item.horario}}</h1>
-                    <h1><strong>{{item.ponente}}</strong></h1>
-                    <p class="card-text">
-                        {{item.descripcion}}
-                    </p>
+<div class="container-fluid">
+    <div class="col-12 p-5">
+        <h1 class="text-talleres">NUESTROS TALLERES</h1>
+    </div>
+    <div class=" container-fluid col-12 py-5">
+        <div class="row" >
+            <div class="col-lg-4" *ngFor="let item of talleres">
+                <div class="card">
+                    <img src="./assets/img/{{item.imagen}}" class="card-img-top"/>
+                    <div class="card-body">
+                        <h2 class="name_taller">{{item.taller}} | {{item.horario}}</h2>
+                        <h2 class="name_ponente"><strong>{{item.ponente}}</strong></h2>
+                        <p class="card-text">
+                            {{item.descripcion}}
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 <app-footer></app-footer>
