--- a/src/app/client/talleres/talleres.component.scss
+++ b/src/app/client/talleres/talleres.component.scss
@@ -1,45 +1,53 @@
-.text-talleres span {
-    text-transform: uppercase;
-    font-weight: 1000;
-    letter-spacing: 10px;
-    color: var(--black-color);
+*{
+    box-sizing: border-box;
+    font-family: 'Century Gothic';
+    font-style: normal;
+    align-content: center;
 }
-
-.text-talleres p {
-    text-transform: uppercase;
-    line-height: 3;
-    letter-spacing: 10px;
-    color: var(--black-color);
-    font-size: x-large;
+img{
+    width: auto;
 }
-
-.text-talleres h2 {
-    color: var(--black-color);
-    font-weight: 1000;
-    text-transform: uppercase;
-    font-size: 5em;
-    line-height: 1;
-    letter-spacing: 10px;
+.card{
+    background: #F9F9F9;
+    border: 1px solid #BFBFBF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    width: 20rem;
 }
-
-.text-talleres h1 {
-    color: var(--black-color);
+.text-talleres{
+    font-weight: 700;
+    font-size: 40px;
+    color: #01022F;
+    text-align: center;
+}
+.name_ponente{
+    font-family: 'Century Gothic';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 22px;
+    color: #000000; 
+    text-align: center;
+    padding-top: 15px;
+}
+.name_taller{
+    font-family: 'Century Gothic';
+    font-style: normal;
     font-weight: 500;
-    text-transform: uppercase;
-    font-size: 3em;
-    line-height: 1;
-    letter-spacing: 10px;
+    font-size: 22px;
+    text-align: center;
+    padding: 15px;
+    color: #000000;
 }
-
-.text-talleres h3 {
-    color: var(--white-color);
-    font-weight: 500;
-    text-transform: uppercase;
-    font-size: 2em;
-    line-height: 1;
-    letter-spacing: 10px;
+.card-text{
+    font-family: 'Century Gothic';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 15px;
+    text-align: center;
+    color: #000000;
+    text-align: center;
 }
-
 .card-body {
     background-color: #F9F9F9;
-}
+} 
