--- a/src/app/client/planes/planes.component.html
+++ b/src/app/client/planes/planes.component.html
@@ -1,53 +1,51 @@
 <app-navbar-client></app-navbar-client>
 <div class="col-12 p-5 text-planes">
-    <h2 align="center">NUESTROS PLANES</h2>
-    <h1 align="center">Obtén tus entradas</h1>
+    <h1 id="Planes" >NUESTROS PLANES</h1>
+    <h2 >Obtén tus entradas</h2>
     <div class="row">
-        <div class="p-5 col-6" align="center">
+        <div class="p-5 col-6">
             <div class="cardNew">
-                <div class="card-header text-center titulo-card1">
-                    <h3>Estudiantes</h3>
+                <div class="card-header titulo-card1">
+                    <h3 class="title-card" >ESTUDIANTE</h3>
                 </div>
                 <div class="card-bodyNew">
-                    <div class="mb-3 row justify-content-md-center" align="center">
+                    <div class="mb-3 row justify-content-md-center">
                         <div class="col-12 text-card">
-                            <h1>$680.mxn</h1>
+                            <h1>$680<strong>MX</strong></h1>
                             <hr />
-                            <p>Acceso al evento por zoom</p>
+                            <p>Acceso al evento por zoom.</p>
                             <hr />
                             <p>
-                                Acceso presencial (aforo limitado previo registro por día
+                                Acceso presencial <br>(Aforo limitado previo al registro por día).
                             </p>
                             <hr />
-                            <p>1 BIT Kit</p>
-                            <hr /><br>
-                            <a [routerLink]="['/completar']"
-                                class="btn_gral btn_primary btn btn-lg">Registrarse</a>
+                            <p>1 BIT Kit.</p>
+                            <hr />
+                            <a [routerLink]="['/registro']" class="btn_gral btn_primary btn btn-lg">Registrarse</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="p-5 col-6" align="center">
+        <div class="p-5 col-6">
             <div class="cardNew">
-                <div class="card-header text-center titulo-card2">
-                    <h3>EXTERNO</h3>
+                <div class="card-header titulo-card2">
+                    <h3 class="title-card">EXTERNO</h3>
                 </div>
                 <div class="card-bodyNew">
-                    <div class="mb-3 row justify-content-md-center" align="center">
+                    <div class="mb-3 row justify-content-md-center">
                         <div class="col-12 text-card">
-                            <h1>$980.mxn</h1>
+                            <h1>$980<strong>MX</strong></h1>
                             <hr />
                             <p>Acceso al evento por zoom</p>
                             <hr />
                             <p>
-                                Acceso presencial (aforo limitado previo registro por día
+                                Acceso presencial <br>(Aforo limitado previo al registro por día).
                             </p>
                             <hr />
                             <p>1 BIT Kit</p>
-                            <hr /><br>
-                            <a [routerLink]="['/registro']"
-                                class="btn_gral btn_primary btn btn-lg">Registrarse</a>
+                            <hr />
+                            <a [routerLink]="['/registro']" class="btn_gral btn_primary btn btn-lg">Registrarse</a>
                         </div>
                     </div>
                 </div>
