--- a/src/app/client/planes/planes.component.scss
+++ b/src/app/client/planes/planes.component.scss
@@ -1,4 +1,134 @@
-.text-planes span {
+*{
+    box-sizing: border-box;
+    font-family: 'Century Gothic';
+    font-style: normal;
+}
+.btn_gral {
+    /*text*/
+    font-family: 'Century Gothic';
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 20px;
+    text-align: center;
+    color: #FFFFFF;
+    /*boton*/
+    letter-spacing: 1px;
+    background: #9100FF;
+    border: 1px solid #9100FF;
+    box-shadow: 0px 2px 9px -1px #9100FF;
+    border-radius: 20px;
+    width: 200px;
+    height: 50px;
+    margin: 2rem;
+    padding: 1rem;
+}
+.text-planes h1 {
+    font-weight: 700;
+    font-size: 40px;
+    text-align: center;
+    color: #01022F;
+    margin: 1rem;
+}
+.text-planes h2 {
+    color: var(--black-color);
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 25px ;
+    text-align: center;
+}
+.cardNew {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    border-radius: 25px 25px 25px 25px !important;
+    padding: 0%;
+    margin: 0%;
+}
+.card-header {
+    position:relative;
+    row-gap: 0px;
+    padding: 25px 0px;
+}  
+.titulo-card1 {
+    color: #FFFFFF;
+    height: 6rem;
+    width: 100%;
+    font-family: 'Century Gothic';
+    font-style: normal;
+    font-weight: bold !important;
+    font-size: 32px;
+    line-height: 39px;
+    text-align: center;
+    background: linear-gradient(96.05deg, #107EFF 13.26%, #A42CFF 91.28%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 25px 25px 0 0;
+    padding: 2rem;
+    margin: 0%;
+}
+.card-bodyNew {
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    background-color: #F8F8F8;
+    border-color: #CBCBCB;
+    border-radius: 0 0 25px 25px !important;
+    height: 28rem;
+    width: 100%;
+}
+.text-card h1 {
+    color: #4B4B4B;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 49px;
+    letter-spacing: 10px;
+    font-family: 'Century Gothic';
+}
+.text-card h1>strong{
+    color: #4B4B4B;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 49px;
+    letter-spacing: 2px;
+    font-family: 'Century Gothic';
+}
+.text-card p {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 18px;
+    color: #575757;
+    padding-top: 1rem;
+    text-align: center !important;
+}
+
+.titulo-card2 {
+    height: 6rem;
+    width: 100%;
+    background: linear-gradient(96.05deg, #D6DB00 13.26%, #4BCE00 91.28%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 25px 25px 0 0;
+    padding: 2rem;
+}
+.title-card{
+    color: #FFFFFF;
+    font-weight: bolder;
+    font-size: 30px;
+    line-height: 35px;
+    text-align: center;
+    font-family: 'Century Gothic';
+}
+.text-patrocinador {
+    font-weight: 700;
+    font-size: 32px;
+    text-align: center;
+    color: #01022F;
+    text-align: center;
+    font-family: 'Century Gothic';
+    padding: .5rem;
+    padding-top: 0% !important;
+}
+
+
+
+/* .text-planes span {
     text-transform: uppercase;
     font-weight: 1000;
     letter-spacing: 10px;
@@ -134,6 +264,6 @@
 .btn_primary:hover {
     color: var(--grey-light);
     background-color: var(--color-bue-button);
-    /* background-color: #09914b; */
-    box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
-}
+     background-color: #09914b; 
+   // box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
+} */
