--- a/src/app/pages/password/password.component.html
+++ b/src/app/pages/password/password.component.html
@@ -1,5 +1,6 @@
-<app-navbar></app-navbar>
-<section id="hero">
+<app-navbar class="emphasized"></app-navbar>
+<div class="modal modal--show">
+  <section id="hero" >
     <div class="container">
       <div class="p-5 col-6 offset-3" align="center">
         <div class="card">
@@ -57,7 +58,7 @@
                       class="btn btn-primary btn-lg"
                       (click)="save()"
                     >
-                      Continuar
+                      Crear
                     </button>
                   </div>
                 </div>
@@ -68,3 +69,4 @@
         </div>
       </div>
     </section>
+</div>
