--- a/src/app/pages/codigo/codigo.component.scss
+++ b/src/app/pages/codigo/codigo.component.scss
@@ -1,18 +1,77 @@
+.emphasized {
+  filter: blur(1px) contrast(0.5) brightness(0.5);
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  background-color: none;
+}
+
+.modal--show {
+  display: flex;
+}
+
 .titulo-card {
-    background-color: #020c27;
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-    border: transparent;
-  }
+  background-color: #020c27;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  border: transparent;
+}
   
-  .card{
-      border-color: transparent;
-  }
-  
-  .card-body {
+.card{
     border-color: transparent;
-    box-shadow: 6px 10px 5px -2px rgba(163, 163, 163, 0.75);
-    -webkit-box-shadow: 6px 10px 5px -2px rgba(163, 163, 163, 0.75);
-    -moz-box-shadow: 6px 10px 5px -2px rgba(163, 163, 163, 0.75);
-    background-color: aliceblue;
-  }
+    background: #FFFFFF;
+    box-shadow: 2px 8px 5px rgba(0, 0, 0, 0.18);
+    border-radius: 20px;
+}
+  
+.card-body {
+  border-color: transparent;
+  box-shadow: 6px 10px 5px -2px rgba(163, 163, 163, 0.75);
+  -webkit-box-shadow: 6px 10px 5px -2px rgba(163, 163, 163, 0.75);
+  -moz-box-shadow: 6px 10px 5px -2px rgba(163, 163, 163, 0.75);
+  background-color: #FFFFFF;
+  border-radius: 20px;
+}
+
+.msg{
+  font-family: 'Century Gothic';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: #000000;
+}
+.no_codigo{
+  font-family: 'Century Gothic';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 15px;
+  text-align: center;
+  color: #000000;
+}
+.click{
+  font-family: 'Century Gothic';
+  font-style: normal;
+  color: #105E6C;
+}
+.form-control{
+  background: #FCFCFC;
+  border: 1px solid #444444;
+  border-radius: 5px;
+}
+.btn{
+  background: #105E6C;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
