--- a/src/app/pages/password/password.component.scss
+++ b/src/app/pages/password/password.component.scss
@@ -1,13 +1,37 @@
+.emphasized {
+  filter: blur(1px) contrast(0.5) brightness(0.5);
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.modal--show {
+  display: flex;
+}
 .titulo-card {
     background-color: #020c27;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
     border: transparent;
+    
   }
   
-  .card{
-      border-color: transparent;
-  }
+.card{
+  border-color: transparent;
+  background: #FFFFFF;
+  box-shadow: 2px 8px 5px rgba(0, 0, 0, 0.18);
+  border-radius: 20px;
+
+}
   
   .card-body {
     border-color: transparent;
@@ -15,4 +39,23 @@
     -webkit-box-shadow: 6px 10px 5px -2px rgba(163, 163, 163, 0.75);
     -moz-box-shadow: 6px 10px 5px -2px rgba(163, 163, 163, 0.75);
     background-color: aliceblue;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    
   }
+
+.form-label{
+  font-family: 'Century Gothic';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: #000000;
+  padding: 10px;
+}
+.btn{
+  background: #105E6C;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
