--- a/src/app/pages/codigo/codigo.component.html
+++ b/src/app/pages/codigo/codigo.component.html
@@ -1,6 +1,6 @@
-<app-navbar class="emphasized"></app-navbar>
+<app-navbar></app-navbar>
 <!-- ======= Hero Section ======= -->
-<div class="modal modal--show">
+<div>
   <section id="hero" >
     <div class="container">
       <div class="p-5 col-6 offset-3" align="center">
