--- a/src/app/pages/codigo/codigo.component.scss
+++ b/src/app/pages/codigo/codigo.component.scss
@@ -1,4 +1,4 @@
-.emphasized {
+/* .emphasized {
   filter: blur(1px) contrast(0.5) brightness(0.5);
 }
 
@@ -17,7 +17,7 @@
 
 .modal--show {
   display: flex;
-}
+} */
 
 .titulo-card {
   background-color: #020c27;
