--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -31,11 +31,10 @@
                                   </nav>
                             </div>
                             <hr />
-                            <h5 class="card-title">Bienvenido de nuevo</h5>
+                            <h5 class="card-title">Crea una cuenta</h5>
                             <form autocomplete="off" [formGroup]="miFormulario">
                                 <div class="mb-3 row justify-content-md-center" align="center">
                                     <div class="col-12">
-                                        <!-- <label class="form-label fw-bold">Correo:</label> !-->
                                         <input type="text" class="form-control" formControlName="correo"
                                             placeholder="Ingrese su correo electrónico" [pattern]="emailCheck" />
                                         <div>
@@ -51,7 +50,6 @@
 
                                 <div class="mb-3 row justify-content-md-center" align="center">
                                     <div class="col-12">
-                                        <!-- <label class="form-label fw-bold">Confirmar correo:</label> !-->
                                         <input type="email" class="form-control" formControlName="confirmCorreo"
                                             placeholder="Confirme su correo electrónico" [pattern]="emailCheck" />
                                         <div [hidden]="correoReq()">
@@ -93,7 +91,7 @@
                                     <div class="col">
                                         <button type="submit" [disabled]="miFormulario.invalid"
                                             class="btn btn-primary btn-lg" (click)="save()">
-                                            Guardar
+                                            Crear cuenta
                                         </button>
                                     </div>
                                 </div>
