--- a/src/app/pages/registro/registro.component.scss
+++ b/src/app/pages/registro/registro.component.scss
@@ -2,7 +2,18 @@
     font-family: 'Century Gothic';
     background-color: black;
 }
+.card-title{
 
+  font-family: 'Century Gothic';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 20px;
+  color: #000000;
+  margin: 1rem;
+  
+  
+  }
 .cuadro {
     background: #020C27;
     width: 411px;
@@ -84,3 +95,17 @@
   .nav-link:active{
     color: royalblue;
   }
+
+  
+  .btn{
+
+    left: 52.18%;
+    right: 24.66%;
+    top: 42.25%;
+    bottom: 53.37%;
+  
+    background: #105E6C;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+  
+    }
