Lista de administradores
Se agrega lista de administradores

--- a/src/app/client/home/home.component.html
+++ b/src/app/client/home/home.component.html
@@ -6,8 +6,8 @@
             <h1 class=""><span>BIT 2023</span></h1>
         </header>
         <main class="px-3 text-welcome">
-            <h2 class="display-1">#Impusa tu realidad</h2>
-            <h2>Bienvenido {{user}}</h2>
+            <h2 class="display-1">#Impulsa tu realidad</h2>
+            <h2>Bienvenido {{usuario.nombre}}</h2>
         </main>
     </div>
 </div>
