--- a/src/app/shared/navbar-client/navbar-client.component.html
+++ b/src/app/shared/navbar-client/navbar-client.component.html
@@ -1,3 +1,4 @@
+<!-- 
 <nav class="navbar color-bit">
     <div class="container-fluid">
       <img src="./assets/img/logo.png" alt="bitmx" class="bitmx" />
@@ -14,36 +15,89 @@
         <li class="nav-item my-2 px-4 px-xxl-4">
           <a class="nav-link" [routerLink]="['/perfil']">Perfil</a>
         </li>
+        <li class="nav-item my-2 px-4 px-xxl-4">
+          <a class="nav-link" [routerLink]="['/listar-admin']">list admin</a>
+        </li>
+        <li class="nav-item my-2 px-4 px-xxl-4">
+          <a class="nav-link" >{{usuario.nombre}}</a>
+        </li>
       </ul>
     </div>
   </nav>
 
-  <div class="pos-f-t">
-    <div class="collapse" id="navbarToggleExternalContent">
-      <div class="bg-dark p-4">
-        <div class="container-fluid">
-          <img src="./assets/img/logo.png" alt="bitmx" class="bitmx" />
-          <ul class="nav justify-content-end">
-            <li class="nav-item my-2 px-4 px-xxl-4">
-              <a class="nav-link" [routerLink]="['/planes']">Planes</a>
-            </li>
-            <li class="nav-item my-2 px-4 px-xxl-4">
-              <a class="nav-link" [routerLink]="['/qr']">Boleto</a>
-            </li>
-            <li class="nav-item my-2 px-4 px-xxl-4">
-              <a class="nav-link" [routerLink]="['/talleres']">Talleres</a>
-            </li>
-            <li class="nav-item my-2 px-4 px-xxl-4">
-              <a class="nav-link" [routerLink]="['/perfil']">Perfil</a>
-            </li>
-          </ul>
-        </div>
 
-      </div>
-    </div>
-    <nav class="navbar navbar-dark bg-dark">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+-->
+<!doctype html>
+<html lang="en">
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <title>NavBar</title>
+</head>
+
+<body class="bg-secondary">
+  <!-- Inicio del menu -->
+  <nav class="navbar navbar-expand-md navbar-dark bg-black">
+    <div class="container-fluid">
+      <!-- icono o nombre -->
+      <a class="navbar-brand" [routerLink]="['/home']" href="#">
+        <img src="./assets/img/logo.png" alt="bitmx" class="bitmx" />
+        <!-- <i class="bi bi-flower1"></i> -->
+        <span class="text-warning"></span>
+      </a>
+      <!-- boton del menu -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-    </nav>
-  </div>
+      <!-- elementos del menu colapsable -->
+      <div class="collapse navbar-collapse" id="menu">
+        <ul class="navbar-nav mx-auto">
+          <!--
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Precios</a>
+          </li>
+          <li class="nav-item my-2 px-4 px-xxl-4">
+            <a class="nav-link" [routerLink]="['/planes']">Planes</a>
+          </li>
+          <li class="nav-item my-2 px-4 px-xxl-4">
+            <a class="nav-link" [routerLink]="['/talleres']">Talleres</a>
+          </li>
+          <li class="nav-item my-2 px-4 px-xxl-4">
+            <a class="nav-link" [routerLink]="['/perfil']">Perfil</a>
+          </li>
+          -->
+          <li class="nav-item my-2 px-4 px-xxl-4">
+            <a class="nav-link" [routerLink]="['/qr']">Validar pago</a>
+          </li>
+          
+          
+          <li class="nav-item my-2 px-4 px-xxl-4">
+            <a class="nav-link" [routerLink]="['/listar-admin']">Lista Administradores</a>
+          </li>
+          
+        </ul>
+        <hr class="d-md-none text-white-50">
+        <a class="nav-link">Usuario: {{usuario.nombre}}</a>
+        <a class="nav-link" href="#">Salir</a>
+        
+      </div>
+    </div>
+  </nav>
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+</body>
+
+</html>
