--- a/src/app/admin/codigo-admin/codigo-admin.component.html
+++ b/src/app/admin/codigo-admin/codigo-admin.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbar-client></app-navbar-client>
 <!-- ======= Hero Section ======= -->
 <section id="hero">
     <div class="container">
