--- a/src/app/client/planes/planes.component.html
+++ b/src/app/client/planes/planes.component.html
@@ -21,7 +21,7 @@
                             <hr />
                             <p>1 BIT Kit.</p>
                             <hr />
-                            <a [routerLink]="['/registro']" class="btn_gral btn_primary btn btn-lg">Registrarse</a>
+                            <a [routerLink]="['/completar']" class="btn_gral btn_primary btn btn-lg">Registrarse</a>
                         </div>
                     </div>
                 </div>
@@ -45,7 +45,7 @@
                             <hr />
                             <p>1 BIT Kit</p>
                             <hr />
-                            <a [routerLink]="['/registro']" class="btn_gral btn_primary btn btn-lg">Registrarse</a>
+                            <a [routerLink]="['/completar']" class="btn_gral btn_primary btn btn-lg">Registrarse</a>
                         </div>
                     </div>
                 </div>
