--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -6,7 +6,7 @@
         <a class="nav-link" href="#Planes">Planes</a>
       </li>
       <li class="nav-item my-2 px-4 px-xxl-4">
-        <a class="nav-link" [routerLink]="['/talleres']">Talleres</a>
+        <a class="nav-link" [routerLink]="['/talleres-pages']">Talleres</a>
       </li>
       <li class="nav-item my-2 px-4 px-xxl-4">
         <a class="nav-link" [routerLink]="['/login']">Login</a>
