--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -69,7 +69,7 @@
                                         <input type="password" class="form-control" formControlName="pass"
                                             placeholder="Ingrese su contraseña" />
                                         <span class="form-text text-danger" *ngIf="campoValido('pass')">Mínimo 8
-                                            caracteres</span>
+                                            caracteres y máximo 10 caracteres</span>
                                     </div>
 
                                     <input type="hidden" value="1" class="form-control" formControlName="perfil" />
